vibe/k8s/overlays/desarrollo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vibe
  namespace: vibe
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/upload
            pathType: Prefix
            backend:
              service:
                name: upload-api
                port:
                  number: 8001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: catalog-api
                port:
                  number: 8000
          - path: /stream
            pathType: Prefix
            backend:
              service:
                name: stream-api
                port:
                  number: 8002
